# buildsign

./: .crates.toml  .crates2.json  .env  .gitignore  .justfile  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  Install-Script.ps1  Invoke-Script.ps1  README.md  Sign-Binary.ps1  Sync-Environment.ps1  env.json  hello.SED  hello.json  hello.lnk  hello.ps1  hello.py  j.ps1  justfile  minimal_justfile  pyproject.toml  script.py  signing.json  tests.py
.github/workflows/: changerelease.yml  ci.yml  env.yml  release.yml
pyapp/.cargo/: config.toml
scripts/: Initialize-Repo.ps1  Sign-Binaries.ps1  Sync-Environment.ps1  Sync-Template.ps1  common.just  inst.just  pre.just  pre.ps1  preamble.ps1  preamble.sh
src/_dev/: pyproject.toml
src/buildsign/: __main__.py  models.py  pyproject.toml
src/hello/: pyproject.toml
src/hello/hello/: __init__.py  __main__.py
tests/: test_hello.py
